# openrump

./: .gitignore  CMakeLists.txt  Main.py  README.md
app/: CMakeLists.txt
app/src/: main.cpp
openrump/: CMakeLists.txt
openrump/include/openrump/: AnimationController.hpp  App.hpp  BaseApp.hpp  Config.hpp  Delegate.hxx  Entity.hpp  EntityBase.hpp  EntityController.hpp  EntityControllerCameraOrbit.hpp  EntityPlayer.hpp  Exception.hpp  Export.hpp  Game.hpp  Input.hpp  InputInterface.hpp  InputListener.hpp  ListenerDispatcher.hpp  ListenerDispatcher.hxx  OISInput.hpp  OISInputSystem.hpp  OgreRenderComponent.hpp  OgreRenderSystem.hpp  OgreRenderer.hpp  PyCallbackDispatcher.hpp  PyGameInterface.hpp  PyGameModule.hpp  PyInterface.hpp  Renderer.hpp  RendererFrameListener.hpp  RendererListener.hpp
openrump/include/openrump/components/: Direction2D.hpp  OgreCamera.hpp  OgreCameraOrbitNode.hpp  OgreEntity.hpp  OgreTranslateRotateNode.hpp  Speed.hpp
openrump/include/openrump/py/ontology/: EntityManagerWrapper.hpp  SystemWrapper.hpp
openrump/include/openrump/py/systems/: InputInterface.hpp
openrump/include/openrump/systems/: CameraOrbit.hpp  DefaultPhysicsWorld.hpp  InputInterface.hpp  LoopTimer.hpp  OISInput.hpp  OgreDotSceneLoader.hpp  OgreDotSceneManager.hpp  OgreRenderer.hpp  SDLInput.hpp  ThirdPersonController.hpp
openrump/src/: AnimationController.cpp  App.cpp  BaseApp.cpp  Entity.cpp  EntityBase.cpp  EntityController.cpp  EntityControllerCameraOrbit.cpp  EntityPlayer.cpp  Exception.cpp  Game.cpp  Input.cpp  InputListener.cpp  LoopTimer.cpp  OISInput.cpp  OISInputSystem.cpp  OgreRenderComponent.cpp  OgreRenderSystem.cpp  OgreRenderer.cpp  PyCallbackDispatcher.cpp  PyEntityBaseInterface.cpp  PyEntityControllerCameraOrbitInterface.cpp  PyEntityControllerInterface.cpp  PyEntityPlayerInterface.cpp  PyGameInterface.cpp  PyGameModule.cpp  PyInterface.cpp  PyOntologyInterface.cpp  PyRendererInterface.cpp  Renderer.cpp  RendererFrameListener.cpp  RendererListener.cpp
openrump/src/py/: Game.cpp  PyCallbackDispatcher.cpp  PythonModules.cpp
openrump/src/py/ontology/: EntityManagerWrapper.cpp  Ontology.cpp  SystemWrapper.cpp
openrump/src/py/systems/: CameraOrbit.cpp  DefaultPhysicsWorld.cpp  InputInterface.cpp  LoopTimer.cpp  OgreDotSceneLoader.cpp  OgreRenderer.cpp  ThirdPersonController.cpp
openrump/src/systems/: CameraOrbit.cpp  DefaultPhysicsWorld.cpp  LoopTimer.cpp  OISInput.cpp  OgreDotSceneLoader.cpp  OgreDotSceneManager.cpp  OgreRenderer.cpp  SDLInput.cpp  ThirdPersonController.cpp
py/: .gitignore  Main.py
py/OpenRump/: World.py  __init__.py
py/ontology/: __init__.py  ontology.py
res/: twilightsparkle.xml
res/cfg/: plugins_d.cfg  resources_d.cfg
